# microcad

./: .gitignore  .gitmodules  CONTRIBUTE.md  Cargo.toml  LICENSE  README.md  TEST_SUMMARY.md  Tutorial changes.md  about.toml  add_license_header.py  foot_pad.µcad  lego_brick.json  lid.stl  logs  microcad.code-workspace  more_grammar.pest  package-lock.json  sample.csg
builtin/: Cargo.toml  README.md  assert.rs  context_builder.rs  import.rs  lib.rs  math.rs  namespace_builder.rs  print.rs  tests.rs  transform.rs
builtin-proc-macro/: Cargo.toml  README.md  lib.rs
builtin/algorithm/: mod.rs
builtin/debug/: assert.rs  mod.rs
builtin/geo2d/: circle.rs  line.rs  mod.rs  pie.rs  rect.rs  text.rs
builtin/geo3d/: cube.rs  cylinder.rs  mod.rs  sphere.rs
builtin/log/: mod.rs
builtin/ops/: align.rs  boolean.rs  center.rs  extrude.rs  hull.rs  mod.rs  orient.rs  revolve.rs  rotate.rs  translate.rs
builtin/transform/: mod.rs  rotate.rs  translate.rs
core/: Cargo.toml  README.md  algorithm.rs  alignment.rs  boolean_op.rs  bounds.rs  build.rs  color.rs  core_error.rs  direction.rs  error.rs  export.rs  geo2d.rs  geo3d.rs  lib.rs  render.rs  render_resolution.rs  theme.rs  traits.rs  transform.rs  triangle.rs
core/algorithm/: boolean_op.rs  mod.rs
core/geo2d/: bounds.rs  circle.rs  collection.rs  edge.rs  geometry.rs  line.rs  mod.rs  pie.rs  primitives.rs  render.rs  renderable.rs  size.rs  tree.rs
core/geo3d/: bounds.rs  collection.rs  extrude.rs  geometry.rs  mesh.rs  mesh_renderer.rs  mod.rs  primitives.rs  render.rs  tree.rs  triangle.rs  triangle_mesh.rs  vertex.rs
core/render/: mod.rs  render2d.rs  render3d.rs  tree.rs
export/: Cargo.toml  README.md  bake.rs  lib.rs  ply.rs  stl.rs  svg.rs  test.stl  tree_dump.rs  yaml.rs
export/bincode/: mod.rs
export/json/: mod.rs
export/ply/: exporter.rs  mod.rs  writer.rs
export/stl/: exporter.rs  mod.rs  primitives.rs  writer.rs
export/svg/: attributes.rs  canvas.rs  exporter.rs  mod.rs  primitives.rs  renderer.rs  tests.rs  writer.rs
export/wkt/: mod.rs
lang/: Cargo.toml  argument_map.rs  call_method.rs  diagnostics.rs  errors.rs  grammar.pest  interpreter.rs  invalid.rs  lib.rs  macros.rs  map_key_type.rs  ord_map.rs  parser.rs  rc.rs  rc_mut.rs  source_file_cache.rs  src_ref.rs  tree_display.rs  ty.rs  type.rs
lang/argument_map/: argument_map.rs  argument_match.rs  mod.rs  multi_argument_map.rs  multiplicity.rs
lang/bake/: mod.rs
lang/builtin/: attributes.rs  color.rs  export.rs  import.rs  mod.rs  module_builder.rs  namespace_builder.rs  operation.rs  workpiece.rs
lang/diag/: diag_handler.rs  diag_list.rs  diagnostic.rs  level.rs  mod.rs
lang/eval/: argument_match.rs  attribute.rs  body.rs  builtin.rs  builtin_function.rs  builtin_module.rs  call_stack.rs  call_tree.rs  context.rs  errors.rs  eval_context.rs  eval_error.rs  expression.rs  externals.rs  format_string.rs  function.rs  grant.rs  identifier.rs  init.rs  link.rs  literal.rs  local_stack.rs  mod.rs  model_expression.rs  module.rs  module_definition.rs  module_init.rs  multiplicity.rs  namespace.rs  output.rs  parameter.rs  part.rs  scope_stack.rs  source_cache.rs  source_file.rs  sources.rs  stack.rs  statement.rs  symbols.rs  tuple.rs  (+3 more)
lang/model/: builder.rs  creator.rs  element.rs  inner.rs  iter.rs  mod.rs  model_error.rs  models.rs  object_properties.rs  operation.rs  origin.rs  properties.rs  render.rs  tests.rs  workpiece.rs
lang/model_tree/: attribute.rs  element.rs  export.rs  iter.rs  metadata.rs  mod.rs  model_node.rs  model_node_builder.rs  model_node_output.rs  model_nodes.rs  modelnode.rs  modelnodes.rs  operation.rs  origin.rs  render.rs  tests.rs  transformation.rs
lang/modeltree/: element.rs  mod.rs  modelnode.rs  modelnodes.rs  transformation.rs
lang/objects/: algorithm.rs  boolean_op.rs  metadata.rs  mod.rs  object.rs  object_attributes.rs  object_builder.rs  object_properties.rs  properties.rs  transform.rs
lang/objecttree/: algorithm.rs  mod.rs  transform.rs
lang/parse/: assignment.rs  attribute.rs  body.rs  call.rs  color.rs  doc_block.rs  document.rs  errors.rs  expression.rs  find_rule.rs  format_string.rs  function.rs  identifier.rs  if_statement.rs  init_definition.rs  lang_type.rs  literal.rs  marker.rs  marker_statement.rs  mod.rs  model_expression.rs  module.rs  namespace.rs  parameter.rs  parse_error.rs  part.rs  part_definition.rs  return_statement.rs  source_file.rs  statement.rs  type.rs  units.rs  use.rs  visibility.rs  workbench.rs
lang/render/: cache.rs  context.rs  hash.rs  mod.rs  output.rs
lang/resolve/: build_error.rs  context.rs  externals.rs  grant.rs  info.rs  lookup.rs  mod.rs  module_definition.rs  names.rs  project.rs  resolve_context.rs  resolve_error.rs  source_cache.rs  source_file_cache.rs  sources.rs  symbol.rs  symbol_definition.rs  symbol_map.rs  symbol_node.rs  symbol_path.rs  symbol_table.rs  symbolize.rs
lang/src_ref/: line_col.rs  mod.rs  refer.rs  src_referrer.rs
lang/sym/: context.rs  mod.rs  stack.rs  sym_error.rs  symbol.rs  symbol_table.rs
lang/syntax/: assignment.rs  attribute.rs  body.rs  doc_block.rs  init_definition.rs  mod.rs  model_assignment.rs  part_definition.rs  qualifier.rs  (+3 more)
parser/: Cargo.toml  build.rs  builtin.rs  call.rs  color.rs  declaration.rs  diagnostics.rs  document.rs  errors.rs  eval.rs  expression.rs  format_string.rs  function.rs  grammar.pest  identifier.rs  lang_type.rs  langtype.rs  lib.rs  list.rs  literal.rs  map_key_type.rs  module.rs  moduletree.rs  object_node.rs  ord_map.rs  parser.rs  syntax_tree.rs  syntaxtree.rs  tuple.rs  type.rs  units.rs  value.rs
render/: Cargo.toml  export.rs  geo2d.rs  lib.rs  mesh.rs  stl.rs  svg.rs  tree.rs
rustmod/: Cargo.toml  lib.rs
std/: Cargo.toml  context_builder.rs  difference.stl  export.rs  lib.rs  math.rs  namespace_builder.rs  print.rs  std.µcad  std.µlib  tests.rs  transform.rs
tests/: Cargo.toml  build.rs  context.rs  lib.rs  markdown_test.rs  microcad_source_file_test.rs  module_multiplicity.µcad  multiplicity.µcad  part.rs  source_file_test.rs  translate.µcad  use_test.rs
(+980 files in other folders)
