# Copyright © 2024 The µcad authors <info@ucad.xyz>
# SPDX-License-Identifier: AGPL-3.0-or-later

[workspace]
default-members = [
    "core",
    "export",
    "lang",
    "builtin",
    "tests",
    "builtin-proc-macro",
    "tools/cli",
]

members = [
    "core",
    "export",
    "lang",
    "builtin",
    "tests",
    "builtin-proc-macro",
    "tools/cli",
]
resolver = "2"

[workspace.package]
description = "µcad: A CAD system for the 21st century"
authors = [
    "Michael Winkelmann (michael@winkelmann.site)",
    "Patrick Hoffmann (p.hoffmann@berlin.de)",
]
version = "0.1.0"
edition = "2021"
homepage = "https://ucad.xyz"
repository = "https://github.com/rustfahrtagentur/microcad"
rust-version = "1.79"
license = "AGPL-3.0-or-later"
keywords = ["cad", "geometry", "3d", "printing", "cnc", "openscad"]


# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[workspace.dependencies]
microcad-core = { path = "core", version = "0.1.0" }
microcad-export = { path = "export", version = "0.1.0" }
microcad-lang = { path = "lang", version = "0.1.0" }
microcad-builtin = { path = "builtin", version = "0.1.0" }
microcad-builtin-proc-macro = { path = "builtin-proc-macro", version = "0.1.0" }
microcad-cli = { path = "tools/cli", version = "0.1.0" }
