# Copyright © 2024-2025 The µcad authors <info@ucad.xyz>
# SPDX-License-Identifier: AGPL-3.0-or-later

[workspace]
default-members = [
    "builtin",
    "core",
    "lang",
    "tests",
    "builtin-proc-macro",
    "tools/cli",
    "tools/update-copyright",
]

members = [
    "builtin",
    "core",
    "lang",
    "tests",
    "builtin-proc-macro",
    "tools/cli",
    "tools/update-copyright",
]
resolver = "2"

[workspace.package]
description = "µcad: A CAD system for the 21st century"
authors = [
    "Michael Winkelmann (michael@winkelmann.site)",
    "Patrick Hoffmann (p.hoffmann@berlin.de)",
]
version = "0.1.0"
edition = "2024"
homepage = "https://ucad.xyz"
repository = "https://github.com/rustfahrtagentur/microcad"
rust-version = "1.85"
license = "AGPL-3.0-or-later"
keywords = ["cad", "geometry", "3d", "printing", "cnc", "openscad"]


# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[workspace.dependencies]
microcad-core = { path = "core", version = "0.1.0" }
microcad-export = { path = "export", version = "0.1.0" }
microcad-lang = { path = "lang", version = "0.1.0" }
microcad-builtin = { path = "builtin", version = "0.1.0" }
microcad-builtin-proc-macro = { path = "builtin-proc-macro", version = "0.1.0" }
