# Copyright © 2024-2025 The µcad authors <info@ucad.xyz>
# SPDX-License-Identifier: AGPL-3.0-or-later

[workspace]
default-members = [
    "builtin",
    "core",
    "lang",
    "import",
    "export",
    "tests",
    "tools/cli",
    "tools/inspector",
    "tools/update-copyright",
    "tools/update-md-banner",
]

members = [
    "builtin",
    "core",
    "lang",
    "tests",
    "import",
    "export",
    "tools/cli",
    "tools/inspector",
    "tools/update-copyright",
    "tools/update-md-banner",
]
resolver = "2"

[workspace.package]
description = "µcad: A CAD system for the 21st century"
authors = [
    "Michael Winkelmann (michael@winkelmann.site)",
    "Patrick Hoffmann (p.hoffmann@berlin.de)",
]
version = "0.1.0"
edition = "2024"
homepage = "https://ucad.xyz"
repository = "https://github.com/rustfahrtagentur/microcad"
rust-version = "1.85"
license = "AGPL-3.0-or-later"
keywords = ["cad", "geometry", "3d", "printing", "cnc", "openscad"]


# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[workspace.dependencies]
debug-cell = { git = "https://github.com/fightling/debug-cell.git" }
microcad-core = { path = "core", version = "0.1.0" }
microcad-import = { path = "import", version = "0.1.0" }
microcad-export = { path = "export", version = "0.1.0" }
microcad-lang = { path = "lang", version = "0.1.0" }
microcad-builtin = { path = "builtin", version = "0.1.0" }
