# Copyright © 2024 The µcad authors <info@ucad.xyz>
# SPDX-License-Identifier: AGPL-3.0-or-later

[package]
name = "microcad-builtin-proc-macro"
description = "µcad builtin proc-macro"

authors.workspace = true
edition.workspace = true
homepage.workspace = true
license.workspace = true
repository.workspace = true
rust-version.workspace = true
version.workspace = true

[lib]
proc-macro = true
path = "lib.rs"

[dependencies]
syn = { version = "2.0.75", features = ["full", "fold"] }
quote = "1.0.8"

[lints.rust]
missing_docs = "warn"

[lints.clippy]
unwrap_used = "warn"
