# Copyright © 2024-2025 The µcad authors <info@ucad.xyz>
# SPDX-License-Identifier: AGPL-3.0-or-later

[package]
name = "microcad-builtin"
description = "µcad Builtin Library"
documentation = "https://docs.rs/microcad-std"
edition.workspace = true
rust-version.workspace = true
version.workspace = true
license = "AGPL-3.0-or-later"

[lib]
path = "lib.rs"

[dependencies]
log = "0.4"
lazy_static = "1.5"
cgmath = "0.18"
geo = "0.29"
anyhow = "1.0"
env_logger = "0.11"
ctor = "0.4"

microcad-core = { workspace = true }
microcad-lang = { workspace = true }
#microcad-export = { workspace = true }

[features]
default = ["geo3d"]
geo3d = []

[lints.rust]
missing_docs = "warn"

[lints.clippy]
unwrap_used = "warn"
