# Copyright © 2024 The µCAD authors <info@ucad.xyz>
# SPDX-License-Identifier: AGPL-3.0-or-later

[package]
name = "microcad-core"
description = "µCAD core"
edition.workspace = true
rust-version.workspace = true
version.workspace = true

[lib]
path = "lib.rs"

[dependencies]
log = "0.4"
cgmath = "0.18"
compact_str = "0.8"
thiserror = "2.0"
geo = "0.29"
rctree = "0.6"
toml = "0.8"
strum = "0.26"

manifold-rs = { path = "../thirdparty/manifold-rs", optional = true, version = "*" }

[features]
default = ["geo3d"]
geo3d = ["dep:manifold-rs"]
