# Copyright © 2024 The µcad authors <info@ucad.xyz>
# SPDX-License-Identifier: AGPL-3.0-or-later

[package]
name = "microcad-core"
description = "µcad core"
documentation = "https://docs.rs/microcad-core"
authors.workspace = true
edition.workspace = true
homepage.workspace = true
license.workspace = true
repository.workspace = true
rust-version.workspace = true
version.workspace = true

[lib]
path = "lib.rs"

[dependencies]
strum = { version = "0.26", features = ["derive"] }
log = "0.4"
cgmath = "0.18"
thiserror = "2.0"
geo = "0.29"
rctree = "0.6"
toml = "0.8"
manifold-rs = { version = "0.4", optional = true }

[features]
default = ["geo3d"]
geo3d = ["dep:manifold-rs"]

[lints.rust]
missing_docs = "warn"

[lints.clippy]
unwrap_used = "warn"
