# Copyright © 2024-2025 The µcad authors <info@ucad.xyz>
# SPDX-License-Identifier: AGPL-3.0-or-later

[package]
name = "microcad-core"
description = "µcad core"
documentation = "https://docs.rs/microcad-core"
authors.workspace = true
edition.workspace = true
homepage.workspace = true
license.workspace = true
repository.workspace = true
rust-version.workspace = true
version.workspace = true

[lib]
path = "lib.rs"

[dependencies]
cgmath = "0.18"
derive_more = { version = "2", features = ["deref", "deref_mut"] }
geo = "0.30"
log = "0.4"
manifold-rs = { version = "0.4", optional = true }
rctree = "0.6"
strum = { version = "0.27", features = ["derive"] }
thiserror = "2.0"
toml = "0.8"

[features]
default = ["geo3d"]
geo3d = ["dep:manifold-rs"]

[lints.rust]
missing_docs = "warn"

[lints.clippy]
unwrap_used = "warn"
