# Copyright © 2024 The µcad authors <info@ucad.xyz>
# SPDX-License-Identifier: AGPL-3.0-or-later

[package]
name = "microcad-export"
description = "µcad export"
documentation = "https://docs.rs/microcad-export"
edition.workspace = true
rust-version.workspace = true
version.workspace = true

[lib]
path = "lib.rs"

[dependencies]
microcad-core = { workspace = true }
microcad-lang = { workspace = true }
geo = "0.29"

[lints.rust]
missing_docs = "warn"

[lints.clippy]
unwrap_used = "warn"
