# Copyright © 2024 The µCAD authors <info@ucad.xyz>
# SPDX-License-Identifier: AGPL-3.0-or-later

[package]
name = "microcad-lang"
description = "µCAD language"
edition.workspace = true
rust-version.workspace = true
version.workspace = true

[lib]
path = "lib.rs"

[dependencies]
pest = "2.7"
pest_derive = "2.7"
log = "0.4"
itertools = "0.13.0"
rctree = "0.6.0"
lazy_static = "1.5"
cgmath = "0.18"
thiserror = "2.0"
env_logger = "0.11"
strum = { version = "0.26", features = ["derive"] }

manifold-rs = { path = "../thirdparty/manifold-rs", optional = true }

microcad-core = { path = "../core" }
microcad-render = { path = "../render" }

[features]
default = ["geo3d"]
geo3d = ["dep:manifold-rs"]
