# Copyright © 2024 The µcad authors <info@ucad.xyz>
# SPDX-License-Identifier: AGPL-3.0-or-later

[package]
name = "microcad-lang"
description = "µcad language"
documentation = "https://docs.rs/microcad-lang"
authors.workspace = true
edition.workspace = true
homepage.workspace = true
license.workspace = true
repository.workspace = true
rust-version.workspace = true
version.workspace = true

[lib]
path = "lib.rs"

[dependencies]
pest = "2.8"
pest_derive = "2.8"
compact_str = "0.9"
log = "0.4"
rctree = "0.6.0"
lazy_static = "1.5"
cgmath = "0.18"
thiserror = "2.0"
env_logger = "0.11"
strum = { version = "0.27", features = ["derive"] }
scan_dir = "0.3"

microcad-core = { workspace = true }
custom_debug = "0.6.2"

[features]
default = ["geo3d"]
geo3d = []

[lints.rust]
missing_docs = "warn"

[lints.clippy]
unwrap_used = "warn"
