[package]
name = "microcad-render"
description = "µCAD renderers"
edition.workspace = true
rust-version.workspace = true
version.workspace = true

[lib]
path = "lib.rs"

[dependencies]
log = "0.4"
geo = "0.28"
cgmath = "0.18"
strum = { version = "0.26", features = ["derive"] }
thiserror = "1.0"

microcad-core = { path = "../core" }
