# Copyright © 2024 The µCAD authors <info@ucad.xyz>
# SPDX-License-Identifier: AGPL-3.0-or-later

[package]
name = "microcad-render"
description = "µCAD renderers"
edition.workspace = true
rust-version.workspace = true
version.workspace = true

[lib]
path = "lib.rs"

[dependencies]
log = "0.4"
geo = "0.29"
cgmath = "0.18"
strum = { version = "0.26", features = ["derive"] }
thiserror = "2.0"

microcad-core = { path = "../core" }

[features]
default = ["geo3d"]
geo3d = []
