[package]
name = "rustmod"
description = "Rust Model Generator"
edition.workspace = true
rust-version.workspace = true
version.workspace = true

[lib]
path = "lib.rs"

[dependencies]
log = "0.4"
thiserror = "1.0"
anyhow = "1"
syn = { version = "2.0", features = ["full"] }
quote = "1.0"
walk_path = { path = "../walk_path" }
