[package]
name = "microcad-std"
description = "µCAD Standard Library"
edition.workspace = true
rust-version.workspace = true
version.workspace = true
license = "MIT"

[lib]
path = "lib.rs"

[dependencies]
log = "0.4"
lazy_static = "1.5"
cgmath = "0.18"
geo = "0.28"

microcad-core = { path = "../core" }
microcad-parser = { path = "../parser" }
microcad-render = { path = "../render" }
microcad-export = { path = "../export" }
microcad-builtin-proc-macro = { path = "../builtin" }

[features]
default = ["geo3d"]
geo3d = []
