# Copyright © 2024 The µCAD authors <info@ucad.xyz>
# SPDX-License-Identifier: AGPL-3.0-or-later

[package]
name = "microcad-tests"
description = "Tests for the µCAD language"
edition.workspace = true
rust-version.workspace = true
version.workspace = true

[lib]
path = "lib.rs"

[dependencies]
pest = "2.7"
pest_derive = "2.7"
anyhow = "1"
log = "0.4"

microcad-core = { path = "../core" }
microcad-export = { path = "../export" }
microcad-lang = { path = "../lang" }
microcad-render = { path = "../render" }
microcad-std = { path = "../std" }

[build-dependencies]
microcad_markdown_test = { path = "microcad_markdown_test", version = "0.1.0" }
microcad_pest_test = { path = "microcad_pest_test", version = "0.1.0" }
microcad_source_file_test = { path = "source_file_test", version = "0.1.0" }
rustfmt-wrapper = "0.2"

[lints.rust]
#missing_docs = "warn"

[lints.clippy]
unwrap_used = "warn"
