# Copyright © 2024 The µcad authors <info@ucad.xyz>
# SPDX-License-Identifier: AGPL-3.0-or-later

[package]
name = "microcad-cli"
version = "0.1.0"
edition.workspace = true

[[bin]]
name = "microcad"
path = "main.rs"

[dependencies]
clap = { version = "4", features = ["derive"] }
anyhow = "1.0"

microcad-std = { path = "../../std" }
microcad-lang = { path = "../../lang" }

[lints.rust]
missing_docs = "warn"

[lints.clippy]
unwrap_used = "warn"
