# Copyright © 2024 The µcad authors <info@ucad.xyz>
# SPDX-License-Identifier: AGPL-3.0-or-later

[package]
name = "microcad-cli"
description = "µcad Command Line Interface"
documentation = "https://docs.rs/microcad-cli"
authors.workspace = true
edition.workspace = true
homepage.workspace = true
license.workspace = true
repository.workspace = true
rust-version.workspace = true
version.workspace = true
default-run = "microcad"

[[bin]]
name = "microcad"
path = "main.rs"

[dependencies]
clap = { version = "4", features = ["derive"] }
anyhow = "1.0"

microcad-std = { workspace = true }
microcad-lang = { workspace = true }
microcad-core = { workspace = true }

[lints.rust]
missing_docs = "warn"

[lints.clippy]
unwrap_used = "warn"
