[package]
name = "update_copyright"
description.workspace = true
authors.workspace = true
version.workspace = true
edition.workspace = true
homepage.workspace = true
repository.workspace = true
rust-version.workspace = true
license.workspace = true
keywords.workspace = true

[dependencies]
regex = "1"
scan_dir = "0.3"
