# Copyright © 2024 The µCAD authors <info@ucad.xyz>
# SPDX-License-Identifier: Apache-2.0

[package]
name = "microcad-viewer"
description = "µcad Viewer"
edition = "2021"
readme = "README.md"

[[bin]]
name = "microcad-viewer"
path = "main.rs"

[dependencies]
slint = { version = "1.12", features = ["unstable-wgpu-24"] }
bevy = { version = "0.16.0", default-features = false, features = [
    "bevy_core_pipeline",
    "bevy_pbr",
    "bevy_window",
    "bevy_scene",
    "bevy_gltf",
    "bevy_log",
    "jpeg",
    "png",
    "tonemapping_luts",
    "multi_threaded",
] }
smol = { version = "2.0.0" }
async-compat = { version = "0.2.4" }
spin_on = { version = "0.1" }

cgmath = { version = "0.18.0", optional = true }
microcad-lang = { workspace = true }
microcad-core = { workspace = true }
microcad-builtin = { workspace = true }
microcad-export = { workspace = true }

[build-dependencies]
slint-build = "1.12"
